	PR c++/77585 	* pt.c (instantiate_decl): Push to class scope lambda resides 	within when instantiating a generic lambda function.

PR c++/77585
	* g++.dg/cpp1y/pr77585.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@243723 138bc75d-0d04-0410-961f-82ee72b054a4